282. Saving, loading & testing our best performing model

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -4676,12 +4676,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EDPi88KM_l91",
-        "outputId": "98739813-b006-434f-8b3c-ed6ccfd30b7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 235
-        }
+        },
+        "id": "EDPi88KM_l91",
+        "outputId": "98739813-b006-434f-8b3c-ed6ccfd30b7f"
       },
       "source": [
         "# Combine model results into a dataframe\n",
@@ -4804,12 +4804,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A0lBan5ABEIb",
-        "outputId": "e86d6f85-2ab1-4e4f-d69a-2425f01cafba",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 636
-        }
+        },
+        "id": "A0lBan5ABEIb",
+        "outputId": "e86d6f85-2ab1-4e4f-d69a-2425f01cafba"
       },
       "source": [
         "# Plot and compare all model results\n",
@@ -4847,12 +4847,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QrG68B8LBnr2",
-        "outputId": "252fc181-32d8-4b5b-d1bc-d3adeb0f7018",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 636
-        }
+        },
+        "id": "QrG68B8LBnr2",
+        "outputId": "252fc181-32d8-4b5b-d1bc-d3adeb0f7018"
       },
       "source": [
         "# Sort models results by f1-score\n",
@@ -4889,15 +4889,236 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "jrpPARKZB49n"
       },
       "source": [
-        ""
+        "### Save and load model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NcCq3rfRDscM",
+        "outputId": "f8f91264-ed9d-429f-d17f-48510df466d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Save the best performing model to SaveModel format(default)\n",
+        "model_5.save(\"skimlit_tribrid_model\")\n"
       ],
-      "execution_count": null,
+      "execution_count": 248,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:absl:Found untraced functions such as lstm_cell_10_layer_call_and_return_conditional_losses, lstm_cell_10_layer_call_fn, lstm_cell_11_layer_call_and_return_conditional_losses, lstm_cell_11_layer_call_fn, lstm_cell_10_layer_call_fn while saving (showing 5 of 10). These functions will not be directly callable after loading.\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: skimlit_tribrid_model/assets\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: skimlit_tribrid_model/assets\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8c-K3wHyFYGo"
+      },
+      "source": [
+        "# Load in best performing model\n",
+        "loaded_model = tf.keras.models.load_model(\"skimlit_tribrid_model\")\n"
+      ],
+      "execution_count": 250,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LgO9cPCeFxAb",
+        "outputId": "483f46fe-0d13-4fc8-a272-8341061954e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions with loaded_model on the validation set\n",
+        "loaded_pred_probs = loaded_model.predict(val_char_token_pos_dataset)\n",
+        "loaded_preds = tf.argmax(loaded_pred_probs, axis=1)\n",
+        "loaded_preds[:10]"
+      ],
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=int64, numpy=array([0, 0, 3, 2, 2, 4, 4, 4, 4, 1])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 251
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vkijBOSJGFaK",
+        "outputId": "b95d44c5-3bda-44db-bf13-fb1fd26b4ad4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Calculate results of loaded model\n",
+        "loaded_model_results = calculate_results(y_true=val_labels_encoded, \n",
+        "                                         y_pred=loaded_preds)\n",
+        "loaded_model_results"
+      ],
+      "execution_count": 252,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 83.38739573679332,\n",
+              " 'f1': 0.8328280846183697,\n",
+              " 'precision': 0.8326422542471428,\n",
+              " 'recall': 0.8338739573679332}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 252
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-O4iHaDGGSd4",
+        "outputId": "9ea26248-c5fc-46b6-8cab-2e8715edd6a0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model_5_results"
+      ],
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 83.38739573679332,\n",
+              " 'f1': 0.8328280846183697,\n",
+              " 'precision': 0.8326422542471428,\n",
+              " 'recall': 0.8338739573679332}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 253
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pWrrfCX_GWwB"
+      },
+      "source": [
+        " assert model_5_results == loaded_model_results"
+      ],
+      "execution_count": 257,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EBJAMAzDGjJp",
+        "outputId": "fdf13e65-ee76-4216-e7f9-4af1563aa1c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check the loaded model summary\n",
+        "loaded_model.summary()"
+      ],
+      "execution_count": 258,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_5_tribrid_embedding_model\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "char_inputs (InputLayer)        [(None, 1)]          0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "token_inputs (InputLayer)       [(None,)]            0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "char_vectorizer (TextVectorizat (None, 290)          0           char_inputs[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "universal_sentence_encoder (Ker (None, 512)          256797824   token_inputs[0][0]               \n",
+            "__________________________________________________________________________________________________\n",
+            "char_embed (Embedding)          (None, 290, 25)      700         char_vectorizer[0][0]            \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_16 (Dense)                (None, 128)          65664       universal_sentence_encoder[0][0] \n",
+            "__________________________________________________________________________________________________\n",
+            "bidirectional_3 (Bidirectional) (None, 48)           9600        char_embed[0][0]                 \n",
+            "__________________________________________________________________________________________________\n",
+            "char_token_hybrid_embedding (Co (None, 176)          0           dense_16[0][0]                   \n",
+            "                                                                 bidirectional_3[0][0]            \n",
+            "__________________________________________________________________________________________________\n",
+            "line_number_input (InputLayer)  [(None, 15)]         0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "total_line_input (InputLayer)   [(None, 20)]         0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_19 (Dense)                (None, 256)          45312       char_token_hybrid_embedding[0][0]\n",
+            "__________________________________________________________________________________________________\n",
+            "dense_17 (Dense)                (None, 32)           512         line_number_input[0][0]          \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_18 (Dense)                (None, 32)           672         total_line_input[0][0]           \n",
+            "__________________________________________________________________________________________________\n",
+            "dropout_5 (Dropout)             (None, 256)          0           dense_19[0][0]                   \n",
+            "__________________________________________________________________________________________________\n",
+            "char_token_positional_embedding (None, 320)          0           dense_17[0][0]                   \n",
+            "                                                                 dense_18[0][0]                   \n",
+            "                                                                 dropout_5[0][0]                  \n",
+            "__________________________________________________________________________________________________\n",
+            "output_layer (Dense)            (None, 5)            1605        char_token_positional_embedding[0\n",
+            "==================================================================================================\n",
+            "Total params: 256,921,889\n",
+            "Trainable params: 124,065\n",
+            "Non-trainable params: 256,797,824\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
