283. Congratulations and your challenge before heading to the next module

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -4900,11 +4900,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NcCq3rfRDscM",
-        "outputId": "f8f91264-ed9d-429f-d17f-48510df466d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NcCq3rfRDscM",
+        "outputId": "f8f91264-ed9d-429f-d17f-48510df466d6"
       },
       "source": [
         "# Save the best performing model to SaveModel format(default)\n",
@@ -4950,11 +4950,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LgO9cPCeFxAb",
-        "outputId": "483f46fe-0d13-4fc8-a272-8341061954e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LgO9cPCeFxAb",
+        "outputId": "483f46fe-0d13-4fc8-a272-8341061954e9"
       },
       "source": [
         "# Make predictions with loaded_model on the validation set\n",
@@ -4981,11 +4981,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vkijBOSJGFaK",
-        "outputId": "b95d44c5-3bda-44db-bf13-fb1fd26b4ad4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vkijBOSJGFaK",
+        "outputId": "b95d44c5-3bda-44db-bf13-fb1fd26b4ad4"
       },
       "source": [
         "# Calculate results of loaded model\n",
@@ -5015,11 +5015,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-O4iHaDGGSd4",
-        "outputId": "9ea26248-c5fc-46b6-8cab-2e8715edd6a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-O4iHaDGGSd4",
+        "outputId": "9ea26248-c5fc-46b6-8cab-2e8715edd6a0"
       },
       "source": [
         "model_5_results"
@@ -5057,11 +5057,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EBJAMAzDGjJp",
-        "outputId": "fdf13e65-ee76-4216-e7f9-4af1563aa1c4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EBJAMAzDGjJp",
+        "outputId": "fdf13e65-ee76-4216-e7f9-4af1563aa1c4"
       },
       "source": [
         "# Check the loaded model summary\n",
@@ -5119,6 +5119,167 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uQgIlBUxG0fP"
+      },
+      "source": [
+        "## Download and load in a pretrained model from Google storage"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pkEw949tH8L0"
+      },
+      "source": [
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "from tensorflow.keras.layers.experimental.preprocessing import TextVectorization\n"
+      ],
+      "execution_count": 259,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rY0wTboDIh60",
+        "outputId": "96228965-9ace-4f7e-ee24-e27831b9000e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://storage.googleapis.com/ztm_tf_course/skimlit/skimlit_tribrid_model.zip\n",
+        "!mkdir skimlit_gs_model\n",
+        "!unzip skimlit_tribrid_model.zip -d skimlit_gs_model"
+      ],
+      "execution_count": 260,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-08-14 19:33:17--  https://storage.googleapis.com/ztm_tf_course/skimlit/skimlit_tribrid_model.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 142.251.2.128, 142.250.101.128, 142.250.141.128, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|142.251.2.128|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 962957902 (918M) [application/zip]\n",
+            "Saving to: ‘skimlit_tribrid_model.zip’\n",
+            "\n",
+            "skimlit_tribrid_mod 100%[===================>] 918.35M  94.6MB/s    in 9.9s    \n",
+            "\n",
+            "2021-08-14 19:33:28 (93.1 MB/s) - ‘skimlit_tribrid_model.zip’ saved [962957902/962957902]\n",
+            "\n",
+            "Archive:  skimlit_tribrid_model.zip\n",
+            "   creating: skimlit_gs_model/skimlit_tribrid_model/\n",
+            "   creating: skimlit_gs_model/skimlit_tribrid_model/assets/\n",
+            "   creating: skimlit_gs_model/skimlit_tribrid_model/variables/\n",
+            "  inflating: skimlit_gs_model/skimlit_tribrid_model/variables/variables.index  \n",
+            "  inflating: skimlit_gs_model/skimlit_tribrid_model/variables/variables.data-00000-of-00001  \n",
+            "  inflating: skimlit_gs_model/skimlit_tribrid_model/saved_model.pb  \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gxf9a1WiKS4h",
+        "outputId": "2585032e-559d-447e-acec-b344704a59c7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Load in downloaded Google storage model\n",
+        "loaded_gs_model = tf.keras.models.load_model(\"skimlit_gs_model/skimlit_tribrid_model\")\n"
+      ],
+      "execution_count": 261,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:SavedModel saved prior to TF 2.5 detected when loading Keras model. Please ensure that you are saving the model with model.save() or tf.keras.models.save_model(), *NOT* tf.saved_model.save(). To confirm, there should be a file named \"keras_metadata.pb\" in the SavedModel directory.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qFPlpz_7J4Q9",
+        "outputId": "5bf2d8e4-553d-4bd0-f826-b3bdf098ad39",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Evaluate the loaded Google Storage model\n",
+        "loaded_gs_model.evaluate(val_char_token_pos_dataset)\n"
+      ],
+      "execution_count": 262,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "945/945 [==============================] - 26s 25ms/step - loss: 0.9459 - accuracy: 0.8283\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.9459028244018555, 0.8283132314682007]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 262
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BgbNX_-rKow5"
+      },
+      "source": [
+        "## Your challenges\n",
+        "\n",
+        "1. Turn the test data samples into a tf.data Dataset(fast loading) and then evaluate(make predictions) the best performing model on the test samples.\n",
+        "\n",
+        "2. Find the most wrong predictions from 1 (these are the samples where the model has predicted the wrong label with the highest prediction probability).\n",
+        "\n",
+        "3. Make exaple predictions (on RCT abstracts from the wild), you can go to PubMed to find these :\n",
+        "https://pubmed.ncbi.nlm.nih.gov/, find and use our model to predict on 3-4 different abstracts from the wild.\n",
+        "      * Some examples : https://github.com/mrdbourke/tensorflow-deep-learning/blob/main/extras/skimlit_example_abstracts.json\n",
+        "\n",
+        "4. See the exercises and extra curriculum on GitHub to further test your skills (for section 09)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lPN1nKn0K9ck"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
