283 Preprocess sample data for model

--- a/09_milestone_project_2_skimlit.ipynb
+++ b/09_milestone_project_2_skimlit.ipynb
@@ -2586,7 +2586,7 @@
         "id": "6D10HNVluCc-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 35
         },
         "outputId": "25614868-8809-4692-dcf7-b060196ba548"
       },
@@ -3396,7 +3396,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 779
+          "height": 976
         },
         "id": "PhKT8usKfVms",
         "outputId": "ed4a39ee-9076-4df8-99a6-b0250b57b35f"
@@ -4373,7 +4373,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 503
+          "height": 976
         },
         "id": "dF1FowpCTs5M",
         "outputId": "c4276820-12bf-416f-d6b2-166d207be088"
@@ -5184,11 +5184,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eK1BgLzTYS9h",
-        "outputId": "3e2cf6a5-31e6-4f48-cd2f-588a17a3cd38",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eK1BgLzTYS9h",
+        "outputId": "3e2cf6a5-31e6-4f48-cd2f-588a17a3cd38"
       },
       "source": [
         "# 1. Evaluate the model on the test dataset\n",
@@ -5220,11 +5220,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zT3iOBY0Zpk6",
-        "outputId": "1025237e-f1d2-4ac4-8cfd-47f54c7485af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zT3iOBY0Zpk6",
+        "outputId": "1025237e-f1d2-4ac4-8cfd-47f54c7485af"
       },
       "source": [
         "# Make predictions probabilities using test dataset\n",
@@ -5251,11 +5251,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tYsNDOzYa9EN",
-        "outputId": "b0961fa8-cf94-4c35-ed20-dd58a4f83ee6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "tYsNDOzYa9EN",
+        "outputId": "b0961fa8-cf94-4c35-ed20-dd58a4f83ee6"
       },
       "source": [
         "calculate_results_gs_model_on_test = calculate_results(y_true=test_labels_encoded,\n",
@@ -5293,11 +5293,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "imvyb8URdU9K",
-        "outputId": "4d72f662-792f-437d-deef-406606a62bdb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "imvyb8URdU9K",
+        "outputId": "4d72f662-792f-437d-deef-406606a62bdb"
       },
       "source": [
         "\n",
@@ -5322,12 +5322,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lUBbEAr4d_Jb",
-        "outputId": "810e32bb-2253-4abc-94d8-eddb87927e0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "lUBbEAr4d_Jb",
+        "outputId": "810e32bb-2253-4abc-94d8-eddb87927e0b"
       },
       "source": [
         "test_df.head()"
@@ -5423,12 +5423,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZQ-JPwt5eY4-",
-        "outputId": "7ab6cc78-e720-48c2-c5a8-ec302da5c9cf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "ZQ-JPwt5eY4-",
+        "outputId": "7ab6cc78-e720-48c2-c5a8-ec302da5c9cf"
       },
       "source": [
         "test_df_results = pd.DataFrame({\"line_number\" : test_df[\"line_number\"],\n",
@@ -5543,19 +5543,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "BUOzYCBLhVNj",
-        "outputId": "f13ee81a-8644-49e8-ec19-de3f6b1b248e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 359
-        }
+        },
+        "id": "BUOzYCBLhVNj",
+        "outputId": "bd4c05e1-2b47-40f3-d021-9dffd4e5b91d"
       },
       "source": [
         "# Find the wrong predictions and sort by prediction probabilities\n",
         "most_wrong = test_df_results[test_df_results[\"target\"] != test_df_results[\"pred\"]].sort_values(\"pred_probs\", ascending=False)\n",
         "most_wrong[:10] # false positives"
       ],
-      "execution_count": 162,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5701,24 +5701,24 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 162
+          "execution_count": 168
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "A6E4TZGdjM3Q",
-        "outputId": "aeb9bece-24bc-420d-8e6f-575a4f0b4ae2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "A6E4TZGdjM3Q",
+        "outputId": "d409298c-d02c-4aa2-cb77-cd41de8edcc7"
       },
       "source": [
         "most_wrong.tail()"
       ],
-      "execution_count": 163,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5814,20 +5814,197 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 163
+          "execution_count": 164
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gtITt9Tpk42C"
+      },
+      "source": [
+        "### 3. Find predictions on RCT abstracts from the wild(from outside example) "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1ujEO7zln9p4",
+        "outputId": "3efb9304-fb2d-437f-d877-c886676c6a1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Make predictions on online RCT abstracts\n",
+        "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/skimlit_example_abstracts.json"
+      ],
+      "execution_count": 165,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-08-15 02:28:36--  https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/skimlit_example_abstracts.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 6737 (6.6K) [text/plain]\n",
+            "Saving to: ‘skimlit_example_abstracts.json’\n",
+            "\n",
+            "\r          skimlit_e   0%[                    ]       0  --.-KB/s               \rskimlit_example_abs 100%[===================>]   6.58K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-08-15 02:28:36 (74.2 MB/s) - ‘skimlit_example_abstracts.json’ saved [6737/6737]\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gtITt9Tpk42C"
+        "id": "D7Ug3hOvo7_4"
       },
       "source": [
-        "### 3. Find predictions on RCT abstracts from the wild(from outside example) "
+        "import json\n",
+        "\n",
+        "def json_read_file(path):\n",
+        "    with open(path) as f:\n",
+        "        data = json.load(f)\n",
+        "    #print(data)\n",
+        "    return np.asarray(data)"
       ],
-      "execution_count": null,
+      "execution_count": 178,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xQnSLTvAugEu"
+      },
+      "source": [
+        "def preprocess_sample_text_with_line_numbers(filename) :\n",
+        "  \"\"\"\n",
+        "  Returns list of dictionary of abstract line data.\n",
+        "\n",
+        "  Takes in filename as json files, reads it contents and sort through each line, \n",
+        "  extracting things like the target label, text of the sentence,\n",
+        "  how many sentences are in the current abstract and what sentence number\n",
+        "  the target line is\n",
+        "  \"\"\"\n",
+        "  input_sample_data = json_read_file(filename) # get all lines from filename\n",
+        "  abstract_lines = \"\" # create an empty abstract\n",
+        "  abstract_samples = [] # create an empty list of abstracts\n",
+        "\n",
+        "  # Loop through each line in the target line\n",
+        "  for rct_record in input_sample_data :\n",
+        "    abstract_lines = rct_record[\"abstract\"].split(\". \")\n",
+        "    for abstract_line_number, abstract_line in enumerate(abstract_lines) :\n",
+        "      line_data = {}\n",
+        "      line_data[\"text\"] = abstract_line.lower()\n",
+        "      line_data[\"line_number\"] = abstract_line_number\n",
+        "      line_data[\"total_lines\"] = len(abstract_lines)\n",
+        "      abstract_samples.append(line_data)\n",
+        "  return abstract_samples"
+      ],
+      "execution_count": 182,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EBw3vQ7bsQ9t",
+        "outputId": "2049a578-d781-4c21-f901-d5370f927540",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "abstract_samples = preprocess_sample_text_with_line_numbers(\"/content/skimlit_example_abstracts.json\")\n",
+        "abstract_samples[:10]\n"
+      ],
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'line_number': 0,\n",
+              "  'text': 'this rct examined the efficacy of a manualized social intervention for children with hfasds',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 1,\n",
+              "  'text': 'participants were randomly assigned to treatment or wait-list conditions',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 2,\n",
+              "  'text': 'treatment included instruction and therapeutic activities targeting social skills, face-emotion recognition, interest expansion, and interpretation of non-literal language',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 3,\n",
+              "  'text': 'a response-cost program was applied to reduce problem behaviors and foster skills acquisition',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 4,\n",
+              "  'text': 'significant treatment effects were found for five of seven primary outcome measures (parent ratings and direct child measures)',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 5,\n",
+              "  'text': 'secondary measures based on staff ratings (treatment group only) corroborated gains reported by parents',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 6,\n",
+              "  'text': 'high levels of parent, child and staff satisfaction were reported, along with high levels of treatment fidelity',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 7,\n",
+              "  'text': 'standardized effect size estimates were primarily in the medium and large ranges and favored the treatment group.',\n",
+              "  'total_lines': 8},\n",
+              " {'line_number': 0,\n",
+              "  'text': 'postpartum depression (ppd) is the most prevalent mood disorder associated with childbirth',\n",
+              "  'total_lines': 10},\n",
+              " {'line_number': 1,\n",
+              "  'text': 'no single cause of ppd has been identified, however the increased risk of nutritional deficiencies incurred through the high nutritional requirements of pregnancy may play a role in the pathology of depressive symptoms',\n",
+              "  'total_lines': 10}]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 184
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3wctrVseuDAT",
+        "outputId": "613aa512-1b0e-4d8b-ef88-a71f695aab96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# take first example and split the data to lines\n",
+        "test_abstract = jdata[0][\"abstract\"]\n",
+        "test_abstract.split(\". \")"
+      ],
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['This RCT examined the efficacy of a manualized social intervention for children with HFASDs',\n",
+              " 'Participants were randomly assigned to treatment or wait-list conditions',\n",
+              " 'Treatment included instruction and therapeutic activities targeting social skills, face-emotion recognition, interest expansion, and interpretation of non-literal language',\n",
+              " 'A response-cost program was applied to reduce problem behaviors and foster skills acquisition',\n",
+              " 'Significant treatment effects were found for five of seven primary outcome measures (parent ratings and direct child measures)',\n",
+              " 'Secondary measures based on staff ratings (treatment group only) corroborated gains reported by parents',\n",
+              " 'High levels of parent, child and staff satisfaction were reported, along with high levels of treatment fidelity',\n",
+              " 'Standardized effect size estimates were primarily in the medium and large ranges and favored the treatment group.']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 181
+        }
+      ]
     }
   ]
 }
